# psw-server-inspector

./: .gitignore  LICENSE  README.md  install-server-inspector.sh  pyproject.toml
src/psw_server_inspector/: main.py  utils.py
src/psw_server_inspector/detectors/: cpu.py  gpu.py  ipmi.py  memory.py  motherboard.py  network.py  network_pcie.py  storage.py  system.py  usb.py  usb_devices.py
src/psw_server_inspector/parsers/: pci.py
src/server_inspector/: __init__.py  colors.py  inspector.py  utils.py
src/server_inspector/detectors/: cpu.py  gpu.py  ipmi.py  memory.py  motherboard.py  network.py  network_pcie.py  storage.py  system.py  usb.py  usb_devices.py
src/server_inspector/parsers/: iommu.py
